--- a/css/codeformat.css
+++ b/css/codeformat.css
@@ -1,7 +1,7 @@
 /* desert scheme ported from vim to google prettify */
 pre.prettyprint {
     display: block;
-    background-color: #2c3e50;
+    color: #2c3e50 !important;
     text-align: left;
     color:#ffffff;
 }
